==> ARMmbed/DAPLink/source/hic_hal/stm32/stm32f072cb/usbd_STM32F072.c <==
#include "usb_def.h"
#include "rl_usb.h"
#include "usbd_event.h"
#include "stm32f0xx_hal.h"
#include "util.h"
#define __NO_USB_LIB_C
#include "usb_config.c"
#define USBD_BTABLE_SIZE                (8 * (USBD_EP_NUM + 1))
#define USBD_GET_FLAG(__INTERRUPT__)    (((USB->ISTR) & (__INTERRUPT__)) == (__INTERRUPT__))
#define USBD_CLEAR_FLAG(__INTERRUPT__)  ((USB->ISTR) &= ~(__INTERRUPT__))

static void _USBD_ConfigEP(uint16_t ep_addr, uint8_t ep_type, uint16_t ep_buf_size)
{
    util_assert(Buf_Offset + ep_buf_size < 512);
    PCD_EPTypeDef *ep = USBD_GetEP(ep_addr);
    ep->doublebuffer = 0;
    ep->pmaadress = Buf_Offset;
    ep->maxpacket = ep_buf_size;
    ep->type = ep_type;
    Buf_Offset += ep_buf_size;

    switch (ep_type) {
        case EP_TYPE_CTRL:
            PCD_SET_EPTYPE(USB, ep->num, USB_EP_CONTROL);
            break;
        case EP_TYPE_BULK:
            PCD_SET_EPTYPE(USB, ep->num, USB_EP_BULK);
            break;
        case EP_TYPE_INTR:
            PCD_SET_EPTYPE(USB, ep->num, USB_EP_INTERRUPT);
            break;
        case EP_TYPE_ISOC:
            PCD_SET_EPTYPE(USB, ep->num, USB_EP_ISOCHRONOUS);
            break;
        default:
        break;
    }
}

void USBD_Init(void)
{
    __HAL_RCC_USB_CLK_ENABLE();
    USB_DisableGlobalInt(USB);
    HAL_NVIC_SetPriority(USB_IRQn, 0, 0);
    HAL_NVIC_EnableIRQ(USB_IRQn);
}

void USBD_Connect(BOOL con)
{
    USB_DisableGlobalInt(USB);

    if (con) {
        USB->CNTR = USB_CNTR_FRES;
        USB->ISTR = 0;
        USB->CNTR = USB_CNTR_RESETM;
        USB->BTABLE = BTABLE_ADDRESS;

        USB_EnableGlobalInt (USB);

        USB->BCDR |= USB_BCDR_DPPU;                // enable internal pullup on DP+ line
    } else {
        USB->CNTR = USB_CNTR_FRES | USB_CNTR_PDWN;

        USB->BCDR &= (uint16_t)(~(USB_BCDR_DPPU)); // disable internal pullup on DP+ line
    }
}

void USBD_Reset(void)
{
    PCD_EPTypeDef *ep = NULL;

    for (int index = 0; index <= USBD_EP_NUM; index++)  {
        ep = USBD_GetEP(index | 0x80);
        ep->is_in = 1;
        ep->num = index;
        ep->type = EP_TYPE_CTRL;
        ep->maxpacket = 0;
        ep->xfer_buff = 0;
        ep->xfer_len = 0;

        ep = USBD_GetEP(index);
        ep->is_in = 0;
        ep->num = index;
        ep->type = EP_TYPE_CTRL;
        ep->maxpacket = 0;
        ep->xfer_buff = 0;
        ep->xfer_len = 0;
    }

    Buf_Offset = USBD_BTABLE_SIZE;
    _USBD_ConfigEP(0x00, EP_TYPE_CTRL, USBD_MAX_PACKET0);
    _USBD_ConfigEP(0x80, EP_TYPE_CTRL, USBD_MAX_PACKET0);
    USBD_EnableEP(0x00);
    USBD_EnableEP(0x80);
    USB_EnableInt(USB);
}

void USBD_SetAddress(U32 adr, U32 setup)
{
    if (setup) {
        return;
    }

    USB->DADDR = (USB_DADDR_EF | adr);
}

void USBD_ConfigEP(USB_ENDPOINT_DESCRIPTOR *pEPD)
{
    uint8_t type;

    switch (pEPD->bmAttributes & USB_ENDPOINT_TYPE_MASK) {
        case USB_ENDPOINT_TYPE_CONTROL:
            type = EP_TYPE_CTRL;
            break;
        case USB_ENDPOINT_TYPE_ISOCHRONOUS:
            type = EP_TYPE_ISOC;
            break;
        case USB_ENDPOINT_TYPE_BULK:
            type = EP_TYPE_BULK;
            break;
        case USB_ENDPOINT_TYPE_INTERRUPT:
            type = EP_TYPE_INTR;
            break;
    }

    _USBD_ConfigEP(pEPD->bEndpointAddress, type, pEPD->wMaxPacketSize);
}

void USBD_EnableEP(U32 EPNum)
{
    PCD_EPTypeDef *ep = USBD_GetEP(EPNum);

    PCD_SET_EP_ADDRESS(USB, ep->num, ep->num);

    if (ep->is_in) {
        /*Set the endpoint Transmit buffer address */
        PCD_SET_EP_TX_ADDRESS(USB, ep->num, ep->pmaadress);
        PCD_CLEAR_TX_DTOG(USB, ep->num);
        /* Configure NAK status for the Endpoint*/
        PCD_SET_EP_TX_STATUS(USB, ep->num, USB_EP_TX_NAK);
    } else {
        /*Set the endpoint Receive buffer address */
        PCD_SET_EP_RX_ADDRESS(USB, ep->num, ep->pmaadress);
        /*Set the endpoint Receive buffer counter*/
        PCD_SET_EP_RX_CNT(USB, ep->num, ep->maxpacket);
        PCD_CLEAR_RX_DTOG(USB, ep->num);
        /* Configure VALID status for the Endpoint*/
        PCD_SET_EP_RX_STATUS(USB, ep->num, USB_EP_RX_VALID);
    }
}

void USBD_DisableEP(U32 EPNum)
{
    PCD_EPTypeDef *ep = USBD_GetEP(EPNum);

    if (ep->is_in==0U) {
        /* Clear the data toggle bits for the endpoint IN/OUT*/
        PCD_CLEAR_RX_DTOG(USB, ep->num);
        PCD_CLEAR_TX_DTOG(USB, ep->num);

        /* Reset value of the data toggle bits for the endpoint out*/
        PCD_TX_DTOG(USB, ep->num);

        PCD_SET_EP_RX_STATUS(USB, ep->num, USB_EP_RX_DIS);
        PCD_SET_EP_TX_STATUS(USB, ep->num, USB_EP_TX_DIS);
    } else {
        /* Clear the data toggle bits for the endpoint IN/OUT*/
        PCD_CLEAR_RX_DTOG(USB, ep->num);
        PCD_CLEAR_TX_DTOG(USB, ep->num);
        PCD_RX_DTOG(USB, ep->num);
        /* Configure DISABLE status for the Endpoint*/
        PCD_SET_EP_TX_STATUS(USB, ep->num, USB_EP_TX_DIS);
        PCD_SET_EP_RX_STATUS(USB, ep->num, USB_EP_RX_DIS);
    }
}

void USBD_ResetEP(U32 EPNum)
{
    if (EPNum & 0x80) {
        PCD_CLEAR_TX_DTOG(USB, EPNum & 0x7f);
    } else {
        PCD_CLEAR_RX_DTOG(USB, EPNum);
    }
}

void USBD_SetStallEP(U32 EPNum)
{
    if (EPNum & 0x80) {
        PCD_SET_EP_TX_STATUS(USB, EPNum & 0x7f, USB_EP_TX_STALL);
    } else {
        PCD_SET_EP_RX_STATUS(USB, EPNum, USB_EP_RX_STALL);
    }
}

void USBD_ClrStallEP(U32 EPNum)
{
    USBD_ResetEP (EPNum);    /* reset DTog Bits	*/

    if (EPNum & 0x80) {
        PCD_SET_EP_TX_STATUS(USB, EPNum & 0x7f, USB_EP_TX_VALID);
    } else {
        PCD_SET_EP_RX_STATUS(USB, EPNum, USB_EP_RX_VALID);
    }
}

U32 USBD_ReadEP(U32 EPNum, U8 *pData, U32 cnt)
{
    PCD_EPTypeDef *ep = USBD_GetEP(EPNum);
    U32 count = 0;

    count = MIN(cnt, PCD_GET_EP_RX_CNT(USB, ep->num));
    USB_ReadPMA(USB, pData, ep->pmaadress, count);
    PCD_SET_EP_RX_STATUS(USB, ep->num, USB_EP_RX_VALID);

    return count;
}

U32 USBD_WriteEP(U32 EPNum, U8 *pData, U32 cnt)
{
    PCD_EPTypeDef *ep = USBD_GetEP(EPNum);
    U32 count = 0;

    count = MIN(cnt, ep->maxpacket);
    USB_WritePMA(USB, pData, ep->pmaadress, count);
    PCD_SET_EP_TX_CNT(USB, ep->num, count);
    PCD_SET_EP_TX_STATUS(USB, ep->num, USB_EP_TX_VALID);

    return count;
}

U32 USBD_GetFrame(void)
{
    return (USB->FNR & (USB_FNR_FN));
}

void USBD_Handler(void)
{
    if (USBD_GET_FLAG(USB_ISTR_CTR))  {
        uint8_t epindex = 0;
        __IO uint16_t wIstr = 0;
        U32 event;

        while (((wIstr = USB->ISTR) & USB_ISTR_CTR) != 0)  {
            epindex = (uint8_t)(wIstr & USB_ISTR_EP_ID);

            if (wIstr & USB_ISTR_DIR)  {
                event = USBD_EVT_OUT;
                if (epindex == 0 && (PCD_GET_ENDPOINT(USB, PCD_ENDP0) & USB_EP_SETUP)) {
                    event = USBD_EVT_SETUP;
                }
                PCD_CLEAR_RX_EP_CTR(USB, epindex);
            } else {
                event = USBD_EVT_IN;
                PCD_CLEAR_TX_EP_CTR(USB, epindex);
            }

            if (USBD_P_EP[epindex]) {
                USBD_P_EP[epindex](event);
            }
        }
    }

    if (USBD_GET_FLAG(USB_ISTR_RESET)) {
        USBD_CLEAR_FLAG(USB_ISTR_RESET);
        USBD_Reset();
        usbd_reset_core();
#ifdef __RTX
        if (USBD_RTX_DevTask) {
            isr_evt_set(USBD_EVT_RESET, USBD_RTX_DevTask);
        }
#else
        if (USBD_P_Reset_Event) {
            USBD_P_Reset_Event();
        }
        USBD_SetAddress(0, 0);
#endif
    }

    if (USBD_GET_FLAG(USB_ISTR_PMAOVR)) {
#ifdef __RTX
        LastError = 2;

        if (USBD_RTX_DevTask) {
            isr_evt_set(USBD_EVT_ERROR, USBD_RTX_DevTask);
        }
#else
        if (USBD_P_Error_Event) {
            USBD_P_Error_Event(2);
        }
#endif
        USBD_CLEAR_FLAG(USB_ISTR_PMAOVR);
    }

    if (USBD_GET_FLAG(USB_ISTR_ERR)) {
#ifdef __RTX
        LastError = 1;

        if (USBD_RTX_DevTask) {
            isr_evt_set(USBD_EVT_ERROR, USBD_RTX_DevTask);
        }
#else
        if (USBD_P_Error_Event) {
            USBD_P_Error_Event(1);
        }
#endif
        USBD_CLEAR_FLAG(USB_ISTR_ERR);
    }

    if (USBD_GET_FLAG(USB_ISTR_WKUP)) {
        USB->CNTR &= ~(USB_CNTR_LPMODE);
        USB->CNTR &= ~(USB_CNTR_FSUSP);
#ifdef __RTX
        if (USBD_RTX_DevTask) {
            isr_evt_set(USBD_EVT_RESUME,  USBD_RTX_DevTask);
        }
#else
        if (USBD_P_Resume_Event) {
            USBD_P_Resume_Event();
        }
#endif
        USBD_CLEAR_FLAG(USB_ISTR_WKUP);
    }

    if (USBD_GET_FLAG(USB_ISTR_SUSP)) {
        /* Force low-power mode in the macrocell */
        USB->CNTR |= USB_CNTR_FSUSP;

        /* clear of the ISTR bit must be done after setting of CNTR_FSUSP */
        USBD_CLEAR_FLAG(USB_ISTR_SUSP);

        USB->CNTR |= USB_CNTR_LPMODE;

#ifdef __RTX
        if (USBD_RTX_DevTask) {
            isr_evt_set(USBD_EVT_SUSPEND, USBD_RTX_DevTask);
        }
#else
        if (USBD_GET_FLAG(USB_ISTR_WKUP) == 0U) {
            if (USBD_P_Suspend_Event) {
                USBD_P_Suspend_Event();
            }
        }
#endif
    }

    if (USBD_GET_FLAG(USB_ISTR_SOF)) {
        USBD_CLEAR_FLAG(USB_ISTR_SOF);
#ifdef __RTX
        if (USBD_RTX_DevTask) {
            isr_evt_set(USBD_EVT_SOF, USBD_RTX_DevTask);
        }
#else
        if (USBD_P_SOF_Event) {
            USBD_P_SOF_Event();
        }
#endif
    }

    if (USBD_GET_FLAG(USB_ISTR_ESOF)) {
        USBD_CLEAR_FLAG(USB_ISTR_ESOF);
    }

    HAL_NVIC_EnableIRQ(USB_IRQn);
}
